tests/ui/feature-gates/feature-gate-type_ascription.stderr
error[E0658]: use of unstable library feature `type_ascription`: placeholder syntax for type ascription
  --> $DIR/feature-gate-type_ascription.rs:4:13
   |
LL |     let a = type_ascribe!(10, u8);
   |             ^^^^^^^^^^^^
   |
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information
   = help: add `#![feature(type_ascription)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
